docs: improve open source readiness